<resources>
    <string name="app_name">WikiUNIPD</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_home">Hello world from Home!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_search">Cerca</string>

    <string name="navdrawer_item_home">Home</string>
    <string name="navdrawer_item_biblio">Biblioteche</string>
    <string name="navdrawer_item_mense">Mense</string>
    <string name="navdrawer_item_studio">Aule Studio</string>
    <string name="navdrawer_item_libere">Aule</string>
    <string name="navdrawer_item_prefs">Preferiti</string>
    <string name="navdrawer_item_settings">Impostazioni</string>

    <string name="action_broswer">Visita il sito web</string>

    <string name="quality">Qualità</string>
    <string name="overcrowding">Affollamento</string>
    <string name="temperature">Temperatura</string>

    <string name="comments">Lascia un commento!</string>

    <string name="send">Invia</string>
    <string name="cancel">Annulla</string>

    <string name="dialog_title">Dettagli Valutazione</string>

    <string name="seats">Posti a sedere: </string>


    <string-array name="string_array_menu">
        <item>Home</item>
        <item>Biblioteche</item>
        <item>Mense</item>
        <item>Aule Studio</item>
        <item>Aule</item>
        <item>Preferiti/item>
        <item></item>Impostazioni</item>

    </string-array>
    <string name="title_activity_room">RoomActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>


</resources>
