<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include
        android:id="@+id/atoolbar"
        layout="@layout/room_toolbar" />



    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/text1"
        android:text="@string/quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <RatingBar
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar1"
        android:layout_gravity="center_horizontal"

        />

    <EditText

        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:hint="@string/comments"
        android:singleLine="true"
        android:layout_below="@+id/ratingBar1"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:id="@+id/text2"
        android:text="@string/overcrowding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />


    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_below="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <EditText

        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:hint="@string/comments"
        android:singleLine="true"
        android:layout_below="@+id/ratingBar2"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:id="@+id/text3"
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        />

    <RatingBar
        android:id="@+id/ratingBar3"
        android:layout_below="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />


    <EditText

        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:hint="@string/comments"
        android:singleLine="true"
        android:layout_below="@+id/ratingBar3"
        android:layout_marginTop="20dp"

        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_below="@+id/editText3"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>



</LinearLayout>

</ScrollView>
